--- a/src/VisualizeHealthData.Web/VisualizeHealthData.Web/Content/Site.css
+++ b/src/VisualizeHealthData.Web/VisualizeHealthData.Web/Content/Site.css
@@ -1,8 +1,12 @@
 ﻿body {
+    font-family: 'Playfair Display', serif;
     padding-top: 50px;
     padding-bottom: 20px;
 }
 
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: 'Playfair Display', serif;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
